--- a/.gitignore
+++ b/.gitignore
@@ -63,12 +63,12 @@ web_modules/
 .rts2_cache_es/
 .rts2_cache_umd/
 
-# Optional REPL history
+# Optional REPL histocxzcccry
 .node_repl_history
 
 # Output of 'npm pack'
 *.tgz
-
+xcxc
 # Yarn Integrity file
 .yarn-integrity
 
